--- a/Resources/CSS/styles.css
+++ b/Resources/CSS/styles.css
@@ -1,14 +1,16 @@
 /* Global Styles */
 
 body {
-    margin: 0;
+    margin: 0 auto;
     background-color: black;
+    text-align: center;
+
 
 }
 
 /* Header */
 
-header {
+header h1 {
     font-family: verdana;
     font-weight: normal;
     font-size: 50px;
@@ -16,4 +18,25 @@ header {
     text-align: center;
     
 
+}
+
+a {
+    color: aquamarine;
+    font-size: 16px;
+}
+
+/* Middle Content */
+
+#travel h1{
+    color: white;
+    font-family: Verdana;
+    font-weight: 300px;
+    font-size: 42px;
+    
+}
+
+#travel p {
+    font-family: Verdana;
+    font-size: 21px;
+    color: gray;
 }
